--- a/src/app/shared/overviews-shared/status-overview-panel/status-overview-panel.component.html
+++ b/src/app/shared/overviews-shared/status-overview-panel/status-overview-panel.component.html
@@ -1,32 +1,32 @@
 <mat-card class="status-panel">
   <mat-card-header class="status-header">
     <mat-card-title class="panel-title-content">
-      <mat-icon [svgIcon]="mode" class="status-icon"></mat-icon>
-      <span>{{ title }}</span>
-      <span class="remote-count">{{ totalCount }}</span>
+      <mat-icon [svgIcon]="mode()" class="status-icon"></mat-icon>
+      <span>{{ title() }}</span>
+      <span class="remote-count">{{ totalCount() }}</span>
     </mat-card-title>
   </mat-card-header>
 
   <mat-card-content class="status-content">
     <div class="status-bar-container">
       <div class="remotes-bar">
-        <div class="bar active-bar" [style.width.%]="activePercentage"></div>
-        <div class="bar inactive-bar" [style.width.%]="inactivePercentage"></div>
+        <div class="bar active-bar" [style.width.%]="activePercentage()"></div>
+        <div class="bar inactive-bar" [style.width.%]="inactivePercentage()"></div>
       </div>
 
       <!-- Legend -->
-      @if (hasData) {
+      @if (hasData()) {
         <div class="legend">
-          @if (activeCount > 0) {
+          @if (activeCount() > 0) {
             <div class="legend-item">
               <span class="color-box active"></span>
-              {{ activeLabel }}: {{ activeCount }}
+              {{ activeLabel() }}: {{ activeCount() }}
             </div>
           }
-          @if (inactiveCount > 0) {
+          @if (inactiveCount() > 0) {
             <div class="legend-item">
               <span class="color-box inactive"></span>
-              {{ inactiveLabel }}: {{ inactiveCount }}
+              {{ inactiveLabel() }}: {{ inactiveCount() }}
             </div>
           }
         </div>
