--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="app-wrapper" appShortcutHandler>
-  @if (uiStateService.isNautilusOverlayOpen$ | async) {
+  @if (isNautilusOverlayOpen()) {
     <app-nautilus (closeOverlay)="handleNautilusBack()"> </app-nautilus>
   }
-  @if (!completedOnboarding) {
+  @if (!completedOnboarding()) {
     <app-onboarding class="onboarding" (completed)="finishOnboarding()"></app-onboarding>
   }
   <app-titlebar class="title-bar"> </app-titlebar>
@@ -11,7 +11,7 @@
   <app-tabs-buttons
     data-tauri-drag-region
     class="tabs"
-    [currentTab]="currentTab"
+    [currentTab]="currentTab()"
     (tabSelected)="setTab($event)"
   ></app-tabs-buttons>
 </div>
