--- a/src/app/features/components/dashboard/app-overview/app-overview.component.html
+++ b/src/app/features/components/dashboard/app-overview/app-overview.component.html
@@ -1,28 +1,28 @@
 <!-- app-overview.component.html -->
-<div class="app-overview" [ngClass]="mode" @fadeInOut>
+<div class="app-overview" [ngClass]="mode()" @fadeInOut>
   <!-- Header Section -->
-  <app-overview-header [mode]="mode"></app-overview-header>
+  <app-overview-header [mode]="mode()"></app-overview-header>
 
   <div class="overview-content">
     <!-- Status Overview Panel -->
     <app-status-overview-panel
-      [mode]="mode"
-      [totalCount]="remotes.length"
-      [activeCount]="activeCount"
-      [inactiveCount]="inactiveCount"
+      [mode]="mode()"
+      [totalCount]="remotes().length"
+      [activeCount]="activeCount()"
+      [inactiveCount]="inactiveCount()"
     >
     </app-status-overview-panel>
 
     <!-- Active Remotes Panel -->
-    @if (activeCount > 0) {
+    @if (activeCount() > 0) {
       <app-remotes-panel
         [title]="getActiveTitle()"
-        [icon]="activeIcon"
-        [remotes]="activeRemotes"
-        [mode]="mode"
-        [actionInProgress]="actionInProgress"
-        [primaryActionLabel]="primaryActionLabel"
-        [activeIcon]="activeIcon"
+        [icon]="activeIcon()"
+        [remotes]="activeRemotes()"
+        [mode]="mode()"
+        [actionInProgress]="actionInProgress()"
+        [primaryActionLabel]="primaryActionLabel()"
+        [activeIcon]="activeIcon()"
         (remoteSelected)="selectRemote($event)"
         (openInFiles)="triggerOpenInFiles($event)"
         (startJob)="startJob.emit({ type: $event.type, remoteName: $event.remoteName })"
@@ -32,15 +32,15 @@
     }
 
     <!-- Inactive Remotes Panel -->
-    @if (inactiveCount > 0) {
+    @if (inactiveCount() > 0) {
       <app-remotes-panel
         [title]="getInactiveTitle()"
         [icon]="'circle-xmark'"
-        [remotes]="inactiveRemotes"
-        [mode]="mode"
-        [actionInProgress]="actionInProgress"
-        [primaryActionLabel]="primaryActionLabel"
-        [activeIcon]="activeIcon"
+        [remotes]="inactiveRemotes()"
+        [mode]="mode()"
+        [actionInProgress]="actionInProgress()"
+        [primaryActionLabel]="primaryActionLabel()"
+        [activeIcon]="activeIcon()"
         (remoteSelected)="selectRemote($event)"
         (openInFiles)="triggerOpenInFiles($event)"
         (startJob)="startJob.emit({ type: $event.type, remoteName: $event.remoteName })"
