--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="home-wrapper">
   <!-- Shutdown Overlay -->
   <app-loading-overlay
-    [isVisible]="isShuttingDown"
+    [isVisible]="isShuttingDown()"
     title="Shutting Down"
     message="Please wait while the application shuts down safely..."
     icon="refresh"
@@ -11,8 +11,13 @@
 
   <mat-sidenav-container class="home-container">
     <!-- Sidebar -->
-    <mat-sidenav #sidenav [(opened)]="isSidebarOpen" [mode]="sidebarMode">
-      <app-sidebar [iconService]="iconService" [remotes]="remotes"></app-sidebar>
+    <mat-sidenav
+      #sidenav
+      [opened]="isSidebarOpen()"
+      (openedChange)="isSidebarOpen.set($event)"
+      [mode]="sidebarMode()"
+    >
+      <app-sidebar [remotes]="remotes()"></app-sidebar>
     </mat-sidenav>
 
     <!-- Main Content -->
@@ -25,7 +30,7 @@
       </div>
 
       <!-- Remote Options Menu -->
-      @if (selectedRemote) {
+      @if (selectedRemote(); as remote) {
         <div class="ellipsis-button-container">
           <button matIconButton class="ellipsis-button" [matMenuTriggerFor]="remoteOptionsMenu">
             <mat-icon svgIcon="ellipsis-vertical"></mat-icon>
@@ -35,11 +40,9 @@
             <button mat-menu-item (click)="$event.stopPropagation()">
               <mat-checkbox
                 labelPosition="before"
-                [checked]="getRemoteSettingValue(selectedRemote.remoteSpecs.name, 'showOnTray')"
+                [checked]="getRemoteSettingValue(remote.remoteSpecs.name, 'showOnTray')"
                 (change)="
-                  saveRemoteSettings(selectedRemote.remoteSpecs.name, {
-                    showOnTray: $event.checked,
-                  })
+                  saveRemoteSettings(remote.remoteSpecs.name, { showOnTray: $event.checked })
                 "
                 class="menu-checkbox"
               >
@@ -48,14 +51,14 @@
             </button>
             <mat-divider></mat-divider>
             <!-- Remote Actions -->
-            <button mat-menu-item (click)="openLogsModal(selectedRemote.remoteSpecs.name)">
+            <button mat-menu-item (click)="openLogsModal(remote.remoteSpecs.name)">
               <span>View Logs</span>
             </button>
-            <button mat-menu-item (click)="cloneRemote(selectedRemote.remoteSpecs.name)">
+            <button mat-menu-item (click)="cloneRemote(remote.remoteSpecs.name)">
               <span>Clone Remote</span>
             </button>
             <mat-divider></mat-divider>
-            <button mat-menu-item (click)="openExportModal(selectedRemote.remoteSpecs.name)">
+            <button mat-menu-item (click)="openExportModal(remote.remoteSpecs.name)">
               <span>Export Configuration</span>
             </button>
             <button mat-menu-item (click)="resetRemoteSettings()">
@@ -66,7 +69,7 @@
             <button
               mat-menu-item
               class="delete-option"
-              (click)="deleteRemote(selectedRemote.remoteSpecs.name)"
+              (click)="deleteRemote(remote.remoteSpecs.name)"
             >
               <span>Delete Remote</span>
             </button>
@@ -75,7 +78,7 @@
       }
 
       <!-- Empty State -->
-      @if (remotes.length === 0 && !isLoading) {
+      @if (remotes().length === 0 && !isLoading()) {
         <div class="empty-state">
           <div class="empty-state-content">
             <div class="icon-container">
@@ -101,13 +104,13 @@
       }
 
       <!-- Overview Components -->
-      @if (remotes.length > 0 && !selectedRemote && !isLoading) {
-        @switch (currentTab) {
+      @if (remotes().length > 0 && !selectedRemote() && !isLoading()) {
+        @switch (currentTab()) {
           @case ('general') {
             <app-general-overview
-              [remotes]="remotes"
-              [jobs]="jobs"
-              [actionInProgress]="actionInProgress"
+              [remotes]="remotes()"
+              [jobs]="jobs()"
+              [actionInProgress]="actionInProgress()"
               (startJob)="startJob($event.type, $event.remoteName)"
               (stopJob)="stopJob($event.type, $event.remoteName, $event.serveId)"
               (browseRemote)="openRemoteInFiles($event, 'mount')"
@@ -117,8 +120,9 @@
           }
           @case ('serve') {
             <app-serve-overview
-              [remotes]="remotes"
-              [runningServes]="runningServes"
+              [remotes]="remotes()"
+              [runningServes]="runningServes()"
+              [actionInProgress]="actionInProgress()"
               (remoteSelected)="selectRemote($event)"
               (startJob)="startJob($event.type, $event.remoteName)"
               (stopJob)="stopJob($event.type, $event.remoteName, $event.serveId)"
@@ -127,11 +131,11 @@
           }
           @default {
             <app-app-overview
-              [mode]="currentTab"
-              [remotes]="remotes"
-              [actionInProgress]="actionInProgress"
+              [mode]="currentTab()"
+              [remotes]="remotes()"
+              [actionInProgress]="actionInProgress()"
               (remoteSelected)="selectRemote($event)"
-              (openInFiles)="openRemoteInFiles($event, currentTab)"
+              (openInFiles)="openRemoteInFiles($event, currentTab())"
               (startJob)="startJob($event.type, $event.remoteName)"
               (stopJob)="stopJob($event.type, $event.remoteName)"
             >
@@ -141,13 +145,13 @@
       }
 
       <!-- Remote Detail View -->
-      @if (selectedRemote && !isLoading) {
-        @switch (currentTab) {
+      @if (selectedRemote(); as remote) {
+        @switch (currentTab()) {
           @case ('general') {
             <app-general-detail
-              [restrictMode]="restrictMode"
-              [jobs]="getJobsForRemote(selectedRemote.remoteSpecs.name)"
-              [selectedRemote]="selectedRemote"
+              [restrictMode]="restrictMode()"
+              [jobs]="getJobsForRemote(remote.remoteSpecs.name)"
+              [selectedRemote]="remote"
               (stopJob)="stopJob($event.type, $event.remoteName)"
               (openRemoteConfigModal)="
                 openRemoteConfigModal($event.editTarget, $event.existingConfig)
@@ -159,10 +163,10 @@
           }
           @case ('serve') {
             <app-serve-detail
-              [selectedRemote]="selectedRemote"
-              [runningServes]="runningServes"
-              [remoteSettings]="loadRemoteSettings(selectedRemote.remoteSpecs.name)"
-              [actionInProgress]="actionInProgress[selectedRemote.remoteSpecs.name]"
+              [selectedRemote]="remote"
+              [runningServes]="runningServes()"
+              [remoteSettings]="loadRemoteSettings(remote.remoteSpecs.name)"
+              [actionInProgress]="actionInProgress()[remote.remoteSpecs.name]"
               (startJob)="startJob($event.type, $event.remoteName)"
               (stopJob)="stopJob($event.type, $event.remoteName, $event.serveId)"
               (openRemoteConfigModal)="
@@ -177,13 +181,13 @@
           }
           @default {
             <app-app-detail
-              [mainOperationType]="currentTab"
-              [selectedSyncOperation]="selectedSyncOperation"
+              [mainOperationType]="currentTab()"
+              [selectedSyncOperation]="selectedSyncOperation()"
               [iconService]="iconService"
-              [selectedRemote]="selectedRemote"
-              [remoteSettings]="loadRemoteSettings(selectedRemote.remoteSpecs.name)"
-              [restrictMode]="restrictMode"
-              [actionInProgress]="actionInProgress[selectedRemote.remoteSpecs.name]"
+              [selectedRemote]="remote"
+              [remoteSettings]="loadRemoteSettings(remote.remoteSpecs.name)"
+              [restrictMode]="restrictMode()"
+              [actionInProgress]="actionInProgress()[remote.remoteSpecs.name]"
               (syncOperationChange)="onSyncOperationChange($event)"
               (openRemoteConfigModal)="
                 openRemoteConfigModal($event.editTarget, $event.existingConfig)
