--- a/src/app/shared/components/serve-card/serve-card.component.html
+++ b/src/app/shared/components/serve-card/serve-card.component.html
@@ -2,22 +2,19 @@
   <mat-card-header class="serve-card-header">
     <div class="serve-info">
       <div class="serve-icon-wrapper">
-        <mat-icon
-          [svgIcon]="getServeTypeInfo(serve.params.type).icon"
-          class="serve-icon"
-        ></mat-icon>
+        <mat-icon [svgIcon]="serveTypeInfo().icon" class="serve-icon"></mat-icon>
       </div>
       <div class="serve-details">
         <div class="serve-title-row">
-          @if (showRemoteName) {
-            <span class="serve-remote-name">{{ getRemoteName(serve) }}</span>
+          @if (showRemoteName()) {
+            <span class="serve-remote-name">{{ remoteName() }}</span>
           }
           <span class="serve-protocol-badge">
-            {{ serve.params.type | uppercase }}
+            {{ serve().params.type | uppercase }}
           </span>
         </div>
 
-        @if (getServeUrl(serve); as url) {
+        @if (serveUrl(); as url) {
           <div class="serve-url-container">
             <span
               class="serve-url"
@@ -31,9 +28,9 @@
             </span>
           </div>
         } @else {
-          <span class="serve-address">{{ serve.addr }}</span>
+          <span class="serve-address">{{ serve().addr }}</span>
         }
-        <span class="serve-fs">{{ serve.params.fs }}</span>
+        <span class="serve-fs">{{ serve().params.fs }}</span>
       </div>
     </div>
     <button
@@ -55,24 +52,24 @@
         class="metadata-value"
         matTooltip="Click to copy ID"
         matTooltipShowDelay="500"
-        (click)="onCopyToClipboard(serve.id, 'ID Copied!'); $event.stopPropagation()"
+        (click)="onCopyToClipboard(serve().id, 'ID Copied!'); $event.stopPropagation()"
         role="button"
         tabindex="1"
       >
-        {{ serve.id }}
+        {{ serve().id }}
       </span>
     </div>
 
-    @if (getOptionKeys(serve.params).length > 0) {
+    @if (optionKeys().length > 0) {
       <div class="metadata-row">
         <mat-icon svgIcon="gear" class="metadata-icon"></mat-icon>
         <span class="metadata-label">Options:</span>
         <span
           class="metadata-value options-value"
-          [matTooltip]="getOptionsTooltip(serve.params)"
+          [matTooltip]="optionsTooltip()"
           matTooltipShowDelay="500"
         >
-          {{ getOptionKeys(serve.params).length }} active
+          {{ optionKeys().length }} active
         </span>
       </div>
     }
